Add initial domain entity Add infrastructure files including dependency injection and dbcontext + factory for migrations Add filestore abstraction and a first implemention for local storage that has to be changed later Update API project to get a few development endpoints Add initial migration Update projects dependencies

--- a/src/DocNestApp.Api/appsettings.Development.json
+++ b/src/DocNestApp.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "FileStore": {
+    "RootPath": "./App_Data"
+  },
+  "ConnectionStrings": {
+    "docnest-db": "Host=localhost;Port=5432;Database=docnest-db;Username=postgres;Password=postgres"
   }
 }
