--- a/src/DocNestApp.Api/DocNestApp.Api.csproj
+++ b/src/DocNestApp.Api/DocNestApp.Api.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints" Version="7.2.0-beta.10" />
-        <PackageReference Include="FastEndpoints.Swagger" Version="7.2.0-beta.10" />
+        <PackageReference Include="FastEndpoints" Version="7.1.1" />
+        <PackageReference Include="FastEndpoints.Swagger" Version="7.1.1" />
         <PackageReference Include="FluentValidation" Version="12.1.1" />
         <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
     </ItemGroup>
