Add integration tests for slice 3

--- a/tests/DocNestApp.IntegrationTests/DocNestApp.IntegrationTests.csproj
+++ b/tests/DocNestApp.IntegrationTests/DocNestApp.IntegrationTests.csproj
@@ -28,6 +28,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\src\DocNestApp.Api\DocNestApp.Api.csproj" />
       <ProjectReference Include="..\..\src\DocNestApp.Infrastructure\DocNestApp.Infrastructure.csproj" />
+      <ProjectReference Include="..\..\src\DocNestApp.Worker\DocNestApp.Worker.csproj" />
     </ItemGroup>
 
 </Project>
