Add new Contracts project for DTOs Add new Web project for demo purposes Add seeder for demo purposes Add new endpoint to reset data and seed

--- a/src/DocNestApp.AppHost/DocNestApp.AppHost.csproj
+++ b/src/DocNestApp.AppHost/DocNestApp.AppHost.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DocNestApp.Api\DocNestApp.Api.csproj" />
     <ProjectReference Include="..\DocNestApp.ServiceDefaults\DocNestApp.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\DocNestApp.Web\DocNestApp.Web.csproj" />
     <ProjectReference Include="..\DocNestApp.Worker\DocNestApp.Worker.csproj" />
   </ItemGroup>
 
