--- a/src/DocNestApp.Api/DocNestApp.Api.csproj
+++ b/src/DocNestApp.Api/DocNestApp.Api.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DocNestApp.Contracts\DocNestApp.Contracts.csproj" />
       <ProjectReference Include="..\DocNestApp.Infrastructure\DocNestApp.Infrastructure.csproj" />
       <ProjectReference Include="..\DocNestApp.Application\DocNestApp.Application.csproj" />
     </ItemGroup>
