--- a/src/DocNestApp.Api/appsettings.Development.json
+++ b/src/DocNestApp.Api/appsettings.Development.json
@@ -10,5 +10,10 @@
   },
   "ConnectionStrings": {
     "docnest-db": "Host=localhost;Port=5432;Database=docnest-db;Username=postgres;Password=postgres"
+  },
+  "DocNest": {
+    "DemoMode": true,
+    "DemoUserId": "11111111-1111-1111-1111-111111111111",
+    "DemoSubjectId": "22222222-2222-2222-2222-222222222222"
   }
 }
